# room-for-rent

./: CMakeLists.txt  README.md  config.lua  test.md
assets/images/: Clouds.ase  Houses.ase  character_heads.ase  ghost.ase  ghost_crawl.ase  girl_2.ase  giỉrl_2.ase  house3.ase  lights  lights.ase  male_shirt.ase  male_shirt.json  male_tshirt.ase  notebook.ase  outside_wall.ase  rfr_room2.ase  student_card.ase  trees.ase  woman.ase
data/dialogues/: prologue_en.json  prologue_vi.json
data/homework/: en.json  vi.json
data/interaction/: details_en.json  details_vi.json  en.json  names_en.json  names_vi.json  vi.json
data/maps/: behind1.tmj  hall.tmj  hall2.tmj  outside.ase  outside.tmj  rfr_room.tmj  rfr_room2.tmj  rfr_room_before.tmj  rfr_room_before2.tmj  untitled.tmj
data/narratives/: en.json  vi.json
data/note/: entry_en.json  entry_vi.json  guide1_vi.txt  guide_vi.txt  note_vi.txt
data/ui/: en.json  vi.json
docs/: todolist.md
gamedata/: assets.lua  beaver.lua  config.lua
gamedata/data/: diary_vi.json
gamedata/luamodules/: camera.lua  character.lua  data.lua  gameflags.lua  gametime.lua  interaction.lua  map.lua  narrative.lua  particle.lua  transition.lua  utilities.lua
gamedata/scripts/: audios.lua  character.lua  door.lua  gamestate.lua  ghost.lua  helper.lua  interactions.lua  lighting.lua  main.lua  outside.lua  player.lua  room_items.lua  test.lua
luamodules/: camera.lua  character.lua  dialogue.lua  gameflags.lua  gametime.lua  interaction.lua  map.lua  narrative.lua  properties.lua  transition.lua  utilities.lua
scripts/: audios.lua  camera.lua  character.lua  cutscene.lua  door.lua  gamestate.lua  ghost.lua  helper.lua  interaction.lua  interactions.lua  lighting.lua  main.lua  map.lua  notebook.lua  outside.lua  player.lua  properties.lua  room_items.lua  shadow.lua  test.lua  transition.lua  utilities.lua
scripts/activities/: work.lua  (+4 more)
src/: asset_loader.cpp  asset_loader.hpp  binding.hpp  cutscene.cpp  cutscene.hpp  dialogue.cpp  dialogue.hpp  event.cpp  event.hpp  game.cpp  game.hpp  interaction.cpp  interaction.hpp  location.hpp  main.cpp  note_drawing.cpp  note_drawing.hpp  phone.hpp  scene.hpp  textbox_drawing.cpp  textbox_drawing.hpp  tooltip.hpp  zindex.hpp
test/: testquestions.lua
(+167 files in other folders)
